
== 2023-09-15 Colorblind Mode in Options
<p>Colorblind mode options have been added and can be found through Setup -&gt; Options -&gt; CONSTELLATION -&gt; Application.</p>
<p>The random generation of node colors has been adjusted based on the selected colorblind mode. Additionally, the color scheme of specific vertex and transaction types has been adjusted for greater contrast.</p>

== 2023-08-28 Markdown support in the Notes View
<p>The notes can now optionally render markdown text. You can now italicise, bold and strikethrough text. Headings can be added to the note as well as lists and sub lists.</p>
<p>The new note pop-up window will have a preview tab where you can see how your markdown text will be rendered before adding it as a note.</p>
<p>Editing notes will also be done through a popup window.</p>
<p>Markdown can be toggled on and off with a checkbox which appears in the create/edit note popup.</p>

== 2023-08-08 - Enabled of Multi-Choice Drop-down bulk selection feature
<p>A number of input field drop-downs that enable the selection of multiple items have had a bulk selection feature enabled.</p>
<p>Right click the input field to access the "Select All" and "Clear All" functionality.</p>
<p>Some instances have an adjacent drop-down labeled "..." that can be used to access the same functionality as right clicking.</p>

== 2023-07-28 Attribute Editor View - Edit Buttons
<p>Edit buttons have been removed from attributes in the Attributes View.</p>
<p>Edit functionality can be achieved by clicking on the field of the attribute.</p>

== 2023-07-28 Replacement of old Find View with new Find View
<p>The existing Find View accessible using the shortcut Ctrl-F has been replaced with the an updated Find View which has been under development and testing.</p> 
<p>The new Find View offers an updated interface that opens by default in a separate window.</p> 