@@ -70,3 +70,4 @@ ApplicationOptionsPanel.jLabel3.text=Mode
 ApplicationOptionsPanel.colorblindLabel.text=Mode
 ApplicationOptionsPanel.colorblindPanel.border.title=Colorblind Mode
 ApplicationOptionsPanel.restartLabel.text=Color changes take effect after restarting Constellation.
+ApplicationOptionsPanel.applyColourChanges.text=Apply to changes to open graphs 
